--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -7,7 +7,7 @@ h1
 {
     font-size: 100px;
     text-align: center;
-    margin-top: 150px;
+    margin-top: 110px;
     -webkit-text-stroke-color: white;
     -webkit-text-stroke-width: 2px; 
 }
@@ -25,7 +25,7 @@ iframe
 
 .slogan
 {
-    background-color: #ffffff;
+    background-color: #606060;
     margin-left: 290px;
     margin-right: 290px;
 }
@@ -49,6 +49,19 @@ iframe
     font-size: 20px;
 }
 
+.over-gallery
+{
+    margin-bottom: -5px;
+}
+
+footer 
+{
+    text-align: center;
+    padding: 5px;
+    background-color: #ffffff;
+    position: sticky;
+}
+
 .black-margin
 {
     -webkit-text-stroke-color: black;
@@ -61,4 +74,15 @@ iframe
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.searchbar
+{
+    margin-left: 500px;
+    margin-right: 500px;
+}
+
+.product
+{
+    margin: 15px;
 }
