Fifth update, fixed some stuff on index and added a background music with controls

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -76,6 +76,11 @@ footer
     -webkit-text-fill-color: transparent;
 }
 
+audio
+{
+    margin-left: 150px;
+}
+
 .searchbar
 {
     margin-left: 35%;
